lib/src/compiler/tests/testdata/errors/123.out
error[E112]: invalid regular expression
 --> line:3:11
  |
3 |     $a = /{(foo|bar)/
  |           ^ repetition operator missing expression
  |
  = note: did you mean `\{` instead of `{`?